fix with latest SSL PR, compile in 32 bits mode

--- a/tools/sdk/ssl/Makefile
+++ b/tools/sdk/ssl/Makefile
@@ -23,3 +23,6 @@ version-header:
 
 native: bearssl/README.txt
 	cd bearssl && make
+
+native32: bearssl/README.txt
+	cd bearssl && make CONF=Unix32
