--- a/tests/examples_style.conf
+++ b/tests/examples_style.conf
@@ -10,7 +10,7 @@ lineend=linux
 indent=spaces=2
 
 # also indent macros
-indent-preprocessor
+#indent-preprocessor
 
 # indent classes, switches (and cases), comments starting at column 1
 indent-classes
@@ -36,9 +36,9 @@ attach-extern-c
 indent-modifiers
 indent-namespaces
 indent-labels
-indent-preproc-block
-indent-preproc-define
-indent-preproc-cond
+#indent-preproc-block
+#indent-preproc-define
+#indent-preproc-cond
 unpad-paren
 add-braces
 remove-comment-prefix
