--- a/.travis.yml
+++ b/.travis.yml
@@ -6,73 +6,97 @@ cache:
   directories:
     - $HOME/astyle
 
-matrix:
+stages:
+  - build
+  - deploy
+
+jobs:
   include:
-    - env:
-      - BUILD_TYPE=package
-    - env:
-      - BUILD_TYPE=build_even
-    - env:
-      - BUILD_TYPE=build_odd
-    - env:
-      - BUILD_TYPE=debug_even
-    - env:
-      - BUILD_TYPE=debug_odd
-    - env:
-      - BUILD_TYPE=platformio_even
-    - env:
-      - BUILD_TYPE=platformio_odd
-    - env:
-      - BUILD_TYPE=docs
-    - env:
-      - BUILD_TYPE=host_tests
-    - env:
-      - BUILD_TYPE=style_check
+    - stage: build
+    # Build stage. To save time, run all kinds of builds and tests in parallel.
+    #
+    # TODO: since we can now call different script for each job,
+    # split the do-it-all common.sh into separate scripts responsible
+    # for different types of jobs below:
+    - name: "Build (1)"
+      env:
+        - BUILD_TYPE=build_even
+    - name: "Build (2)"
+      env:
+        - BUILD_TYPE=build_odd
+    - name: "Debug (1)"
+      env:
+        - BUILD_TYPE=debug_even
+    - name: "Debug (2)"
+      env:
+        - BUILD_TYPE=debug_odd
+    - name: "Platformio (1)"
+      env:
+        - BUILD_TYPE=platformio_even
+    - name: "Platformio (2)"
+      env:
+        - BUILD_TYPE=platformio_odd
 
-install:
-  - >
-      [ "$BUILD_TYPE" = "docs" ] && {
-        pip install --user -r doc/requirements.txt;
-      } || true
-  - >
-      [ "$BUILD_TYPE" = "style_check" ] && {
-        [ -f $HOME/astyle/build/gcc/bin/astyle ] || {
-          wget -O astyle_3.1_linux.tar.gz https://sourceforge.net/projects/astyle/files/astyle/astyle%203.1/astyle_3.1_linux.tar.gz/download;
-          tar -xf astyle_3.1_linux.tar.gz -C $HOME;
-          make -C $HOME/astyle/build/gcc;
-        }
-        make -C $HOME/astyle/build/gcc prefix=$HOME install;
-      } || true
-  - sudo apt-get install valgrind lcov
+    - name: "Docs"
+      env:
+        - BUILD_TYPE=docs
+      install:
+        - pip install --user -r doc/requirements.txt;
 
+    - name: "Host tests"
+      env:
+        - BUILD_TYPE=host_tests
+      install:
+        - sudo apt-get install valgrind lcov
+
+    - name: "Style check"
+      env:
+        - BUILD_TYPE=style_check
+      install:
+        - >
+            [ "$BUILD_TYPE" = "style_check" ] && {
+              [ -f $HOME/astyle/build/gcc/bin/astyle ] || {
+                wget -O astyle_3.1_linux.tar.gz https://sourceforge.net/projects/astyle/files/astyle/astyle%203.1/astyle_3.1_linux.tar.gz/download;
+                tar -xf astyle_3.1_linux.tar.gz -C $HOME;
+                make -C $HOME/astyle/build/gcc;
+              }
+              make -C $HOME/astyle/build/gcc prefix=$HOME install;
+            } || true
+
+    # Deploy stage.
+    # Here we build the package JSON (always) and do the deployments
+    - stage: deploy
+      if: env(TRAVIS_SECURE_ENV_VARS) = true
+      env: BUILD_TYPE=package
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
+      deploy:
+      # Create Github release, upload artifacts
+      - provider: releases
+        draft: true
+        skip_cleanup: true
+        api_key:
+          secure: kYsxX/N21fwLSTLpbb0c96PnQHn1CIMqZstm02hfUhCX83FygWSh4vs3gzW28DMpjQMZ6vC4g+jtfosYU2tUhht/bynurDH4edpEyGeMyK+fzCI9pAr4JT0RbKQI84EC18ScpgP/UP0jTc1LJ+xl8UMwSiDE0mzHx7xJ4mMNQbA=
+        file_glob: true
+        tag_name: $TRAVIS_TAG
+        target_commitish: $TRAVIS_COMMIT
+        file:
+          - package/versions/$TRAVIS_TAG/esp8266-$TRAVIS_TAG.zip
+          - package/versions/$TRAVIS_TAG/package_esp8266com_index.json
+        on:
+          repo: esp8266/Arduino
+          tags: true
+
+      # Update the package index URL to point to the new version
+      - provider: script
+        skip_cleanup: true
+        script: bash package/deploy_package_index.sh
+        on:
+          repo: esp8266/Arduino
+          tags: true
+
+# This is to catch jobs which accidentally don't specify the script to run
 script:
-  - $TRAVIS_BUILD_DIR/tests/common.sh
-
-deploy:
-  - provider: releases
-    draft: true
-    skip_cleanup: true
-    api_key:
-      secure: A4FBmqyhlzy33oPeZVolg2Q/A3ZcJ3WnRQqQJ3NAPy+qGM5xcboOYtwcLL9vKaHZGfUB7lUP9QVZFGou1Wrmo9DnPvAoe3+XvCaDRGzVMxeIpu7UStbBD4Knbh98tlbMvZCXYRlT4VcusI9bMLK6UWw4sMdPislBh2FEfglTiag=
-    file_glob: true
-    tag_name: $TRAVIS_TAG
-    target_commitish: $TRAVIS_COMMIT
-    file:
-      - package/versions/$TRAVIS_TAG/esp8266-$TRAVIS_TAG.zip
-      - package/versions/$TRAVIS_TAG/package_esp8266com_index.json
-    on:
-      repo: esp8266/Arduino
-      tags: true
-      condition: "$BUILD_TYPE = package"
-  
-  - provider: script
-    skip_cleanup: true
-    script: bash package/deploy_package_index.sh
-    on:
-      repo: esp8266/Arduino
-      tags: true
-      condition: "$BUILD_TYPE = package"
-
+  - false
 
 notifications:
   email:
