--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ jobs:
       stage: deploy
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env: BUILD_TYPE=package
+      if: env(CI_GITHUB_API_KEY) IS present
       deploy:
       # Create Github release, upload artifacts
       - provider: releases
