--- a/.travis.yml
+++ b/.travis.yml
@@ -19,37 +19,46 @@ jobs:
     # for different types of jobs below:
     - name: "Host tests"
       stage: build
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=host_tests
       install:
         - sudo apt-get install valgrind lcov
 
     - name: "Build (1)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build_even
     - name: "Build (2)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=build_odd
     - name: "Debug (1)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=debug_even
     - name: "Debug (2)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=debug_odd
     - name: "Platformio (1)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=platformio_even
     - name: "Platformio (2)"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=platformio_odd
 
     - name: "Docs"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=docs
       install:
         - pip install --user -r doc/requirements.txt;
 
     - name: "Style check"
+      script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
         - BUILD_TYPE=style_check
       install:
