--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ cache:
   directories:
     - $HOME/astyle
 
+git:
+  depth: false
+  submodules: false
+
+before_install:
+  - git submodule update --init
+
 stages:
   - build
   - deploy
@@ -45,7 +52,7 @@ jobs:
       # Update the package index URL to point to the new version
       - provider: script
         skip_cleanup: true
-        script: CI_GITHUB_API_KEY=$CI_GITHUB_API_KEY bash package/deploy_package_index.sh
+        script: bash package/deploy_package_index.sh $CI_GITHUB_API_KEY
         on:
           repo: esp8266/Arduino
           tags: true
