git: depth 1, submodules not recursive

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ cache:
   directories:
     - $HOME/astyle
 
+git:
+  depth: 1
+  submodules: false
+
+before_install:
+  - git submodule update --init
+
 stages:
   - build
   - deploy
