--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: bash
 os: linux
 dist: trusty
 
+git:
+  depth: 1
+  submodules: false
+
+before_install:
+  - git submodule update --init  # no recursive update
+
 cache:
   directories:
     - $HOME/astyle
