--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
   directories:
     - $HOME/astyle
 
+#useless?
 #stages:
 #  - build
 #  - deploy
@@ -82,11 +83,11 @@ jobs:
     # Deploy stage.
     # Here we build the package JSON (always) and do the deployments
     - name: "Package / deploy"
+      if: env(TRAVIS_PULL_REQUEST) != "false"
       stage: deploy
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env: BUILD_TYPE=package
       # TRAVIS_PULL_REQUEST is set to the pull request number if the current job is a pull request build, or false if it’s not.
-      if: env(TRAVIS_PULL_REQUEST) != "false"
       deploy:
       # Create Github release, upload artifacts
       - provider: releases
