--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,6 @@ cache:
   directories:
     - $HOME/astyle
 
-#useless?
-#stages:
-#  - build
-#  - deploy
-
 jobs:
   include:
     # Build stage. To save time, run all kinds of builds and tests in parallel.
@@ -83,10 +78,8 @@ jobs:
     # Deploy stage.
     # Here we build the package JSON (always) and do the deployments
     - name: "Package / deploy"
-      # TRAVIS_PULL_REQUEST_BRANCH:
-      # if the current job is a pull request, the name of the branch from which the PR originated.
-      # if the current job is a push build, this variable is empty ("").
-      if: env(TRAVIS_PULL_REQUEST_BRANCH) = ""
+      # require the branch name to NOT be master (note for PRs this is the base branch name)
+      if: branch != master
       stage: deploy
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env: BUILD_TYPE=package
