--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,14 @@ stages:
 jobs:
   include:
     # Build stage. To save time, run all kinds of builds and tests in parallel.
-    #
+    - name: "Host tests"
+      stage: build
+      script: $TRAVIS_BUILD_DIR/tests/ci/host_test.sh
+      install: sudo apt-get install valgrind lcov
+
     # TODO: since we can now call different script for each job,
     # split the do-it-all common.sh into separate scripts responsible
     # for different types of jobs below:
-    - name: "Host tests"
-      stage: build
-      script: $TRAVIS_BUILD_DIR/tests/common.sh
-      env:
-        - BUILD_TYPE=host_tests
-      install:
-        - sudo apt-get install valgrind lcov
-
     - name: "Build (1)"
       script: $TRAVIS_BUILD_DIR/tests/common.sh
       env:
@@ -51,36 +47,21 @@ jobs:
         - BUILD_TYPE=platformio_odd
 
     - name: "Docs"
-      script: $TRAVIS_BUILD_DIR/tests/common.sh
-      env:
-        - BUILD_TYPE=docs
-      install:
-        - pip install --user -r doc/requirements.txt;
+      script: $TRAVIS_BUILD_DIR/tests/ci/build_docs.sh
+      install: pip install --user -r doc/requirements.txt;
 
     - name: "Style check"
-      script: $TRAVIS_BUILD_DIR/tests/common.sh
-      env:
-        - BUILD_TYPE=style_check
-      install:
-        - >
-            if [ ! -f $HOME/astyle/build/gcc/bin/astyle ]; then
-              wget -O astyle_3.1_linux.tar.gz https://sourceforge.net/projects/astyle/files/astyle/astyle%203.1/astyle_3.1_linux.tar.gz/download;
-              tar -xf astyle_3.1_linux.tar.gz -C $HOME;
-              make -C $HOME/astyle/build/gcc;
-            fi
-            make -C $HOME/astyle/build/gcc prefix=$HOME install;
+      script: $TRAVIS_BUILD_DIR/tests/ci/style_check.sh
+      install: tests/ci/install_astyle.sh
+
+    - name: "Boards"
+      script: $TRAVIS_BUILD_DIR/tests/ci/build_boards.sh
 
     # Deploy stage.
     # Here we build the package JSON (always) and do the deployments
     - name: "Package / deploy"
       stage: deploy
-      script:
-        - >
-            if [ -n "$CI_GITHUB_API_KEY" ]; then
-              $TRAVIS_BUILD_DIR/tests/common.sh
-            else
-              echo "Not building the package."
-            fi
+      script: tests/ci/build_package.sh
       env: BUILD_TYPE=package
       deploy:
       # Create Github release, upload artifacts
