--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ jobs:
       env:
         - BUILD_TYPE=docs
       install:
-        - pip install --user -r doc/requirements.txt;
+        - pip3 install --user -r doc/requirements.txt;
 
     - name: "Style check"
       script: $TRAVIS_BUILD_DIR/tests/common.sh
