--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ jobs:
       env:
         - BUILD_TYPE=docs
       install:
+        - sudo apt-get install python3-pip
         - pip3 install --user -r doc/requirements.txt;
 
     - name: "Style check"
