--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,9 @@ jobs:
 
     - name: "Docs"
       script: $TRAVIS_BUILD_DIR/tests/ci/build_docs.sh
-      install: pip3 install --user -r doc/requirements.txt;
+      install:
+          - sudo apt-get install python3-pip
+          - pip3 install --user -r doc/requirements.txt;
 
     - name: "Style check"
       script: $TRAVIS_BUILD_DIR/tests/ci/style_check.sh
