--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libraries/SoftwareSerial"]
 	path = libraries/SoftwareSerial
 	url = https://github.com/plerup/espsoftwareserial.git
+[submodule "libraries/ESP8266SdFat"]
+	path = libraries/ESP8266SdFat
+	url = https://github.com/earlephilhower/ESP8266SdFat.git
